# fitbit-agent

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  app.py  check_agent.py  docker-compose.yml  pyproject.toml  server.py
.agents/skills/code-review/: SKILL.md
.agents/skills/coding-backend/: SKILL.md
.agents/skills/coding-frontend/: SKILL.md
.agents/skills/feature-team/: SKILL.md
.agents/skills/tdd/: SKILL.md
.claude/agents/: app-code-reviewer.md  fitbit-backend-dev.md  fitbit-frontend-dev.md  issue-planner.md
.codex/agents/: fitbit-backend-dev.toml  fitbit-frontend-dev.toml  issue-planner.toml
.faceted/: README.md  config.yaml
.faceted/compositions/: code-review.yaml  coding-backend.yaml  coding-frontend.yaml  feature-team.yaml  issue-create.yaml  planning.yaml  security-review.yaml  tdd.yaml
.questions/: question-2026-02-10.md  question-2026-02-17.md  question-2026-02-19.md  question-2026-02-27.md  question-2026-03-03.md  question-2026-03-05.md  question-2026-03-07.md  question-2026-03-09.md
.steering/: TASK-001_2026-02-10.md  TASK-003_2026-02-10.md  TASK-004_2026-02-14.md  TASK-010_2026-02-19.md  TASK-010_2026-02-22.md  tasklist.md
.takt/workflows/: issue-driven-dev.yaml
agent/: context.py  graph.py  langfuse_setup.py  nodes.py  state.py
agent/fitbit/: client.py
agent/memory/: connection_pool.py  embedding.py  manager.py
agent/tests/: test_fitbit_client.py  test_fitbit_tools.py  test_memory_manager.py  test_models.py  test_pbt_planning.py  test_planning_tools.py  test_planning_tools_llm.py
agent/tools/: fitbit_tools.py  models.py  planning_tools.py
aidlc-docs/: aidlc-state.md  audit.md
api/: chat.py  health.py  router.py
api/docs/: sse.md
app/: router.py
app/api/: chat.py  health.py  router.py
app/controllers/: auth.py  chat.py  health.py
app/repositories/: user_repository.py
app/schemas/: auth.py  chat.py
app/services/: fitbit_service.py
backend/: .gitignore  containers.py  pom.xml  router.py
backend/config/: connection_pool.py
backend/controllers/: auth.py  chat.py  health.py
backend/decorators/: masked_credentials.py
backend/migrations/: env.py
backend/models/: auth.py  chat.py  message.py  user.py
backend/repositories/: chat_repository.py  message_repository.py  user_repository.py
backend/schemas/: chat.py
backend/services/: fitbit_service.py
backend/tests/: conftest.py
docker/: .env.example  .gitignore  docker-compose.yml
docs/: architecture.md  basic-functional-design.md  development-guidelines.md  planning.md  repository-structure.md  requirements.md
fitbit/: models.py
frontend/: .env.sample  next.config.ts
memory/: init.sql  manager.py  models.py
models/: health.py
qa-docs/agent/: fitbit-client-context.md  memory-save-skip.md  test-import-bedrock-error.md
qa-docs/ai/: multi-provider-cross-review.md  takt-rules-routing.md
qa-docs/backend/: bedrock-region-error.md  di-container-and-depends.md  fastapi-get-cookie.md  httponly-cookie-ui.md  mypy-config.md  oauth-callback-redirect.md
qa-docs/frontend/: hydration-error.md  ngrok-single-url.md  send-button-stuck.md  sse-not-streaming.md  sse-stream-internals.md  tailwind-not-applied.md
scripts/: takt-watch.sh
tests/: README.md  test_fitbit_client.py  test_fitbit_tools.py  test_memory_manager.py  test_models.py  test_pbt_planning.py  test_planning_tools.py  test_planning_tools_llm.py
tools/: fitbit_tools.py  planning_tools.py
(+198 files in other folders)
