[project]
name = "fitbit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # AI / LangGraph
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langfuse>=2.0.0",
    # Embedding
    "sentence-transformers>=3.0.0",
    # DB
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true