[project]
name = "fitbit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # HTTP Handler
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # AI / LangGraph
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    # DB
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    # Migrations
    "alembic>=1.14.0",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "langchain>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pytest-cov>=5.0.0",
    "types-psycopg2>=2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]
